# KVS

./: .gitignore  Cargo.toml  README.md
benches/: kvstore.rs
src/: client.rs  engine.rs  err.rs  kv.rs  lib.rs  protocol.rs  server.rs
src/engine/: kv.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs  naive.rs  rayon_pool.rs  shared_queue.rs
tests/: cli.rs  kv_store.rs  tests.rs
