[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Xynnn_ <278954852@qq.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
clap = { version = "2.34.0"}
tempfile = "3.2.0"
walkdir = "2.3.2"
failure = { version = "0.1.8", features = [ "failure_derive" ]}
serde = { version = "1.0.117", features = ["derive"]}
bincode = "1.3.3"
snailquote = "0.3.1"