[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Xynnn_ <278954852@qq.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
clap = { version = "2.33.0"}
tempfile = "3.2.0"
walkdir = "2.3.2"
failure = { version = "0.1.8", features = [ "failure_derive" ]}
serde = { version = "1.0.117", features = ["derive"]}
bincode = "1.3.3"
criterion = "0.3"
rand = "0.6.5"
log = "0.4.14"
stderrlog = "0.5.1"
serde_json = "1.0.73"
sled = "0.34.5"
env_logger = "0.8.1"
panic-control = "0.1.4"
crossbeam-utils = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "kvstore"
harness = false